[workspace]
resolver = "3"
members = ["breakout"]

[workspace.package]
version = "0.1.0"
authors = ["Umut Dag <me@umtdg.com>"]
edition = "2024"

[workspace.dependencies]
bevy = "0.19"
avian2d = "0.7.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
